# CaRINA-agent

./: .gitignore  CarinaAgent.py  CarinaAgentDisparitydataset.py  CarinaAgentRos.py  README.md  agent_entrypoint.sh  entrypoint.sh  execute_carina.sh  todo.txt
bashrc/: .bashrc
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/include/msgs_action/: Brake.h  OperationMode.h  SteeringAngle.h  Throttle.h  VehicleState.h
catkin_ws/devel/include/msgs_mapping/: HDMap.h
catkin_ws/devel/include/msgs_navigation/: EmergencyStop.h  GlobalPlan.h  Path.h  SpeedConstraint.h  TrajectoryError.h  TrajectoryPoint.h
catkin_ws/devel/include/msgs_perception/: BoundingBox.h  BoundingBoxArray.h  Obstacle.h  ObstacleArray.h  StereoCloudImage.h
catkin_ws/devel/include/msgs_traffic/: TrafficSign.h  TrafficSignArray.h  signs.h  traffic_light.h
catkin_ws/devel/lib/elas_lrm/: elas_lrm_node
catkin_ws/devel/lib/lidar_birds_eye_view/: lidar_birds_eye_view_height_map_node  lidar_birds_eye_view_node
catkin_ws/devel/lib/lrm_localization_stack/: ekf_node  imu_broadcaster_node  mapping_node
catkin_ws/devel/lib/pkgconfig/: ackermann_msgs.pc  carina_2d_detection.pc  carina_3d_detection.pc  carina_bridge.pc  carina_description.pc  carina_master.pc  cnn_planner.pc  collision_detection.pc  control.pc  create_dataset_imitation_learning.pc  create_images_video.pc  decision_making.pc  elas_lrm.pc  emergency_monitor.pc  fault_detection.pc  fpn_planner.pc  global_path_planning.pc  global_plan_monitor.pc  lidar_birds_eye_view.pc  local_path_planning.pc  lrm_lidar_object_tracking.pc  lrm_localization_stack.pc  mpc_traj_generator.pc  msgs_action.pc  msgs_mapping.pc  msgs_navigation.pc  msgs_perception.pc  msgs_traffic.pc  obstacle_filter_path.pc  polar_height_map.pc  ros_numpy.pc  status_publisher.pc  timed_roslaunch.pc  traffic_signs.pc
catkin_ws/devel/lib/polar_height_map/: heightmap_full_stereo  heightmap_node_grid_stereo  polarheightmap_full_stereo  polarheightmap_node
catkin_ws/devel/share/ackermann_msgs/cmake/: ackermann_msgs-msg-paths.cmake  ackermann_msgsConfig.cmake
catkin_ws/devel/share/carina_2d_detection/cmake/: carina_2d_detectionConfig.cmake
catkin_ws/devel/share/carina_3d_detection/cmake/: carina_3d_detectionConfig.cmake
catkin_ws/devel/share/carina_bridge/cmake/: carina_bridgeConfig.cmake
catkin_ws/devel/share/carina_description/cmake/: carina_descriptionConfig.cmake
catkin_ws/devel/share/carina_master/cmake/: carina_masterConfig.cmake
catkin_ws/devel/share/cnn_planner/cmake/: cnn_plannerConfig.cmake
catkin_ws/devel/share/collision_detection/cmake/: collision_detectionConfig.cmake
catkin_ws/devel/share/control/cmake/: controlConfig.cmake
catkin_ws/devel/share/create_dataset_imitation_learning/cmake/: create_dataset_imitation_learningConfig.cmake
catkin_ws/devel/share/create_images_video/cmake/: create_images_videoConfig.cmake
catkin_ws/devel/share/decision_making/cmake/: decision_makingConfig.cmake
catkin_ws/devel/share/elas_lrm/cmake/: elas_lrmConfig.cmake
catkin_ws/devel/share/emergency_monitor/cmake/: emergency_monitorConfig.cmake
catkin_ws/src/carina/carina_bridge/: CMakeLists.txt  package.xml
catkin_ws/src/carina/carina_description/: CMakeLists.txt  multipleshapes.gv
catkin_ws/src/carina/carina_master/: CMakeLists.txt  package.xml
catkin_ws/src/carina/carina_master/launch/: carina.launch  carinaDisparityDataset.launch  carina_dataset_planner.launch
catkin_ws/src/carina/fault_detection/: CMakeLists.txt  package.xml
catkin_ws/src/carina/status_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/dataset/create_dataset_imitation_learning/: CMakeLists.txt
catkin_ws/src/dataset/create_images_video/: CMakeLists.txt
catkin_ws/src/messages/msgs_action/: CMakeLists.txt
catkin_ws/src/messages/msgs_mapping/: CMakeLists.txt
catkin_ws/src/messages/msgs_navigation/: .a.swp  CMakeLists.txt  package.xml
catkin_ws/src/messages/msgs_perception/: CMakeLists.txt  package.xml
catkin_ws/src/messages/msgs_traffic/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/cnn_planner/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/control/: CMakeLists.txt
catkin_ws/src/navigation/decision_making/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/fpn_planner/: CMakeLists.txt
catkin_ws/src/navigation/global_path_planning/: CMakeLists.txt
catkin_ws/src/navigation/global_plan_monitor/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/local_path_planning/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/mpc_traj_generator/: CMakeLists.txt
catkin_ws/src/perception/carina_2d_detection/: .gitignore  CMakeLists.txt  README.md  package.xml
catkin_ws/src/perception/carina_3d_detection/: CMakeLists.txt
catkin_ws/src/perception/collision_detection/: CMakeLists.txt
catkin_ws/src/perception/elas_lrm/: CMakeLists.txt
catkin_ws/src/perception/emergency_monitor/: CMakeLists.txt
catkin_ws/src/perception/lidar_birds_eye_view/: CMakeLists.txt  package.xml
catkin_ws/src/perception/obstacle_detection/: CMakeLists.txt
catkin_ws/src/perception/polar_height_map/: .gitignore  CMakeLists.txt  README.md  nodelets.xml
catkin_ws/src/perception/polar_height_map/include/polar_height_map/: heightmap.h
catkin_ws/src/perception/polar_height_map/launch/: null_polar_height_map.launch  polar_height_map.launch
catkin_ws/src/perception/polar_height_map/src/: heightmap_full_stereo.cpp  heightmap_grid_stereo.cpp  polar_heightmap_full_stereo.cpp  polarheightmap.cpp  polarheightmap_full.cpp  polarheightmap_node.cpp  polarheightmap_nodelet.cpp
catkin_ws/src/perception/sgm_lrm/: CMakeLists.txt  package.xml
catkin_ws/src/perception/stops_from_opendrive/: CMakeLists.txt  package.xml
catkin_ws/src/perception/traffic_signs/: CMakeLists.txt  package.xml
catkin_ws/src/perception/yolov5/: CMakeLists.txt  package.xml
config/: agent_params.yaml  carla_challege.rviz  gt_carla_challege.rviz
make_docker_lrm/: Dockerfile_leaderboard.ros  launch_sequence_nodes  make_docker_leaderboard_1.sh  make_docker_leaderboard_2.sh  run_docker
(+316 files in other folders)
