<?xml version="1.0"?>
<package format="2">
  <name>carina_master</name>
  <version>0.0.0</version>
  <description>The carina_master package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="carla@todo.todo">carla</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/carina_master</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!--build_depend>camera_signs_detection</build_depend-->
  <build_depend>control</build_depend>
  <!--build_depend>dbscan_pointcloud</build_depend-->
  <build_depend>decision_making</build_depend>
  <build_depend>elas_lrm</build_depend>
  <build_depend>global_path_planning</build_depend>
  <build_depend>global_plan_monitor</build_depend>
  <build_depend>local_path_planning</build_depend>
  <build_depend>mpc_traj_generator</build_depend>
  <build_depend>msgs_action</build_depend>
  <build_depend>msgs_mapping</build_depend>
  <build_depend>msgs_navigation</build_depend>
  <build_depend>msgs_perception</build_depend>
  <build_depend>msgs_traffic</build_depend>
  <!--build_depend>obstacle_detection</build_depend-->
  <!--build_depend>tfsignals_stereo2_3d</build_depend-->
  <build_depend>traffic_signs</build_depend>
  <!--build_depend>velodyne_height_map</build_depend-->
  <!--build_export_depend>camera_signs_detection</build_export_depend-->
  <build_export_depend>control</build_export_depend>
  <!--build_export_depend>dbscan_pointcloud</build_export_depend-->
  <build_export_depend>decision_making</build_export_depend>
  <build_export_depend>elas_lrm</build_export_depend>
  <build_export_depend>global_path_planning</build_export_depend>
  <build_export_depend>global_plan_monitor</build_export_depend>
  <build_export_depend>local_path_planning</build_export_depend>
  <build_export_depend>mpc_traj_generator</build_export_depend>
  <build_export_depend>msgs_action</build_export_depend>
  <build_export_depend>msgs_mapping</build_export_depend>
  <build_export_depend>msgs_navigation</build_export_depend>
  <build_export_depend>msgs_perception</build_export_depend>
  <build_export_depend>msgs_traffic</build_export_depend>
  <!--build_export_depend>obstacle_detection</build_export_depend-->
  <!--build_export_depend>tfsignals_stereo2_3d</build_export_depend-->
  <build_export_depend>traffic_signs</build_export_depend>
  <!--build_export_depend>velodyne_height_map</build_export_depend-->
  <!--exec_depend>camera_signs_detection</exec_depend-->
  <exec_depend>control</exec_depend>
  <!--exec_depend>dbscan_pointcloud</exec_depend-->
  <exec_depend>decision_making</exec_depend>
  <exec_depend>elas_lrm</exec_depend>
  <exec_depend>global_path_planning</exec_depend>
  <exec_depend>global_plan_monitor</exec_depend>
  <exec_depend>local_path_planning</exec_depend>
  <exec_depend>mpc_traj_generator</exec_depend>
  <exec_depend>msgs_action</exec_depend>
  <exec_depend>msgs_mapping</exec_depend>
  <exec_depend>msgs_navigation</exec_depend>
  <exec_depend>msgs_perception</exec_depend>
  <exec_depend>msgs_traffic</exec_depend>
  <!--exec_depend>obstacle_detection</exec_depend-->
  <!--exec_depend>tfsignals_stereo2_3d</exec_depend-->
  <exec_depend>traffic_signs</exec_depend>
  <!--exec_depend>velodyne_height_map</exec_depend-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
